--- a/practicetable.html
+++ b/practicetable.html
@@ -1,12 +1,19 @@
 <html>
     <head>
+        <h1 style="text-align: center; color: black; font-style: italic;">Cricket Score Card</h1>
+        <style>
+           tr:hover {
+                background-color: yellow;
+            }
+        </style>
+        </head>
         <body>
             <table border="1", width="100%">
                 <thead width="100%">
                     <th>World Giants Innings</th>
                     <th>147-4 (20 Ov)</th>
                 </thead>
-                <thead>
+                <thead style="background-color: aqua;">
                     <th>Batter</th>
                     <th></th>
                     <th>R</th>
@@ -16,8 +23,9 @@
                     <th>sr</th>
 
                 </thead>
-                    <tr>
-                        <td>L Simmons</td>
+                <tbody>
+                    <tr style="text-align: center;">
+                        <td style="background-color: blue;"> L Simmons</td>
             
                         <td>run out (Tanvir)</td>
                         <td>17</td>
@@ -26,12 +34,43 @@
                         <td>1</td>
                         <td>106.25</td>
                     </tr>
-
-                <tbody>
-
-
+                    <tr style="text-align: center;">
+                        <td>van Wyk (wk)</td>
+                        <td>b Razzak</td>
+                        <td>0</td>
+                        <td style="background-color: blueviolet;">7</td>
+                        <td>0</td>
+                        <td>0</td>
+                        <td>0.00</td>
+                    </tr>
+                    <tr style="text-align: center;">
+                        <td>Watson (c)</td>
+                        <td>lbw b Razzak</td>
+                        <td>0</td>
+                        <td>2</td>
+                        <td>0</td>
+                        <td style="background-color: azure;">0</td>
+                        <td>0.00</td>
+                    </tr>
+                    <tr style="text-align: center;">
+                        <td>Kallis</td>
+                        <td>not out</td>
+                        <td>78</td>
+                        <td>56</td>
+                        <td style="background-color: brown;">5</td>
+                        <td>3</td>
+                        <td>144.44</td>
+                    </tr>
+                    <tr style="text-align: center;">
+                        <td>Ross Taylor</td>
+                        <td>b Thisara Perera</td>
+                        <td style="background-color: red;">32</td>
+                        <td>33</td>
+                        <td>3</td>
+                        <td>0</td>
+                        <td>96</td>
+                    </tr>
                 </tbody>
             </table>
         </body>
-    </head>
 </html>
