--- a/practicetable.html
+++ b/practicetable.html
@@ -64,7 +64,7 @@
                     <tr style="text-align: center;">
                         <td>Ross Taylor</td>
                         <td>b Thisara Perera</td>
-                        <td style="background-color: red;">32</td>
+                        <td style="background-color: rgb(195, 118, 118);">32</td>
                         <td>33</td>
                         <td>3</td>
                         <td>0</td>
