All files changed

--- a/23march/form.html
+++ b/23march/form.html
@@ -18,8 +18,8 @@
                 <option value="Volleyball">Volleyball</option></select><br><br>
 
                <label for="Gender:">Gender</label>
-               <label for="Male">Male</label><input type="radio" id="Male" value="Male">
-               <label for="Female">Female</label><input type="radio" id="Female" value="Female"><br><br>
+               <label for="Male">Male</label><input type="radio" name="Gender">
+               <label for="Female">Female</label><input type="radio" name="Gender"><br><br>
 
                <label for="Age">Select Your Age</label>
                <input type="number" min="0" placeholder="Select"><br><br>
