--- a/27march/index.html
+++ b/27march/index.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>
-            welcome to ekart
-            <link rel="stylesheet" type="image" href="E-kart-logo.png">
+            welcome to Amazon
+            <link rel="icon" type="image/jpeg" href="Ecommerce/assets/images/favicon.jpeg">
             
         </title>
     </head>
