--- a/27march/index.html
+++ b/27march/index.html
@@ -1,9 +1,6 @@
 <html>
     <head>
-        <title>
-            welcome to Amazon
-            <link rel="icon" type="image/jpeg" href="Ecommerce/assets/images/favicon.jpeg">
-            
-        </title>
+        <title>Welcome to Flipkart</title>
+        <link rel="icon" type= "image"  href="Assets/Images/Favicon.png">
     </head>
 </html>
