--- a/pseudo.html/Pseudoclass.html
+++ b/pseudo.html/Pseudoclass.html
@@ -1,8 +1,11 @@
 <html>
     <head>
         <style>
-            img.hover {
+            img:hover {
                 width: 205px; height: 155px;
+            }
+            body{
+                background-color: aqua;
             }
         </style>
     </head>
