--- a/javascript/ControlStatements/probemSwitch.html
+++ b/javascript/ControlStatements/probemSwitch.html
@@ -18,7 +18,7 @@ create dropdown list of 5 lang and based on user selection, display the content 
         <option value="Kannada">Kannada</option>
     </select>
  
-  <label id="value">Do you like cheese?</label>
+  <label id="value"></label>
     <script>
          function capture()
         {
